<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_course"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_list_course"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_list_course" />
        <item
            android:id="@+id/nav_course_detail"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_detail_course" />
    </group>
</menu>