<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.main.ui.course.CourseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/thCourse1"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/tht1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBelajar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_bg"
                android:paddingHorizontal="64dp"
                android:text="@string/thb1"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_corner_stroke"
                android:paddingHorizontal="64dp"
                android:text="@string/thb2"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tc1"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="48dp"
                android:background="@drawable/button_bg"
                android:paddingHorizontal="32dp"
                android:text="@string/pelajari_lebih"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/ivC1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="48dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivC2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/tc2"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tcc2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tcc3"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tcc4"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tcc5"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="48dp"
                android:background="@drawable/button_bg"
                android:paddingHorizontal="32dp"
                android:text="@string/daftar_sekarang"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/meet_our_graduates"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tcr1"
                android:textColor="@color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:background="@color/white"
            android:padding="24dp"
            android:id="@+id/rvReview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_review_alumni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/ready_to_start_learning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp"
                android:background="@drawable/button_bg"
                android:paddingHorizontal="32dp"
                android:text="@string/daftar_sekarang"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/orange"
                android:gravity="center"
                android:layout_marginTop="48dp"
                android:text="@string/langkah_mudah"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="32dp"
                android:text="@string/memulai_belajar_di_refatory_course"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/ivLangkah"
                android:layout_marginVertical="24dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_bg"
                android:paddingHorizontal="64dp"
                android:text="@string/pelajari_lebih"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <include
            layout="@layout/footer_satu"/>

    </LinearLayout>

</ScrollView>