<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.refactory.test_refactory.view.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.refactory.test_refactory.view.main.ui.course.CourseFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/course_fragment" />

    <fragment
        android:id="@+id/nav_list_course"
        android:name="com.refactory.test_refactory.view.main.ui.list_course.ListCourseFragment"
        android:label="@string/menu_list_course"
        tools:layout="@layout/list_course_fragment" />
    <fragment
        android:id="@+id/nav_course_detail"
        android:name="com.refactory.test_refactory.view.main.ui.course_detail.CourseDetailFragment"
        android:label="@string/menu_list_course"
        tools:layout="@layout/course_detail_fragment" />
</navigation>